2005-07-08  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_class_init),
	(totem_pl_parser_write_pls), (totem_pl_parser_write_with_title),
	(totem_pl_parser_write), (totem_pl_parser_finalize),
	(totem_pl_parser_add_pls), (totem_pl_parser_mimetype_is_ignored),
	(totem_pl_parser_parse_internal),
	(totem_pl_parser_add_ignored_scheme),
	(totem_pl_parser_add_ignored_mimetype):
	* src/plparse/totem-pl-parser.h: add totem_pl_parser_write_with_title ()
	and totem_pl_parser_add_ignored_mimetype() for the benefit of Rhythmbox
	(Closes: #148347)

2005-07-06  Bastien Nocera  <hadess@hadess.net>

	* configure.in: clean up the xine-lib version checking, thanks
	to Thomas for spotting it

2005-07-04  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* README: remove GStreamer DVD menus TODO item

2005-07-04  Bastien Nocera  <hadess@hadess.net>

	* data/properties.glade: make the Album name selectable, not the
	label that goes with the album name (spotted by Jan Arne Petersen)
	(Closes: #308671)

2005-07-04  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/playlist-16.png:
	* data/playlist-24.png:
	* data/playlist.glade:
	* data/totem.glade:
	* data/totem.schemas.in:
	* src/Makefile.am:
	* src/ev-sidebar.[ch]:
	* src/totem-menu.h:
	* src/totem-playlist.c: (totem_playlist_get_toplevel),
	(totem_playlist_error), (totem_playlist_add_files),
	(totem_playlist_save_files), (update_repeat_cb),
	(update_shuffle_cb), (init_config), (totem_playlist_init),
	(totem_playlist_new), (totem_playlist_set_repeat),
	(totem_playlist_set_shuffle), (totem_playlist_class_init):
	* src/totem-playlist.h:
	* src/totem-private.h:
	* src/totem-sidebar.c: (totem_sidebar_toggle),
	(on_sidebar_button_toggled), (on_show_sidebar1_activate),
	(toggle_sidebar_from_sidebar), (totem_sidebar_is_visible),
	(totem_sidebar_setup):
	* src/totem-sidebar.h:
	* src/totem-statusbar.c: (totem_statusbar_new_from_glade):
	* src/totem-statusbar.h: