@@ -1,3 +1,8 @@
+2005-07-09  Bastien Nocera  <hadess@hadess.net>
+
+	* src/plparse/totem-pl-parser.c: (totem_pl_parser_ignore):
+	ignore text/* and image/* files
+
 2005-07-08  Bastien Nocera  <hadess@hadess.net>
 
 	* configure.in:
